--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ NEXT_PUBLIC_APP_ID = 0
 NEXT_PUBLIC_BROKER_ID = 0
 NEXT_PUBLIC_SECRET = ""
 NEXT_PUBLIC_API_URL = ""
+
+#Basic Auth
+BASIC_AUTH_USER = ""
+BASIC_AUTH_PASSWORD = ""
